--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,1 +1,12 @@
 @import "./icon.less";
+
+// 全局样式
+.app-nav-bar {
+    background-color: #00CED1 !important;
+    .van-nav-bar__title {
+        color: #fff !important;
+    }
+    .van-icon {
+        color: #fff !important;
+    }
+}
