--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -10,3 +10,15 @@
         color: #fff !important;
     }
 }
+.app-cell-group {
+    .van-cell {
+        padding: 16px;
+        font-size: 16px;
+        .van-icon {
+            font-size: 16px;
+        }
+    }
+}
+.van-hairline {
+    border: 0;
+}
