--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,5 +1,7 @@
 @import "./icon.less";
-
+body {
+    background-color: #f5f7f9;
+}
 // 全局样式
 .app-nav-bar {
     background-color: #00CED1 !important;
