--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -4,12 +4,12 @@ body {
 }
 // 全局样式
 .app-nav-bar {
-    background-color: #00CED1 !important;
+    background-color: #00CED1 ;
     .van-nav-bar__title {
-        color: #fff !important;
+        color: #fff;
     }
     .van-icon {
-        color: #fff !important;
+        color: #fff;
     }
 }
 .app-cell-group {
